--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://metzgr.github.io/beta-performance-gov/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Performance.gov'
+theme = "Pgov"
