--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "postcss assets/css/main.css -o static/css/main.css"
+  },    
   "repository": {
     "type": "git",
     "url": "git+https://github.com/metzgr/beta-performance-gov.git"
@@ -23,3 +24,4 @@
     "tailwindcss": "^3.3.2"
   }
 }
+
