--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://metzgr.github.io/beta-performance-gov/'
-languageCode = 'en-us'
+defaultContentLanguage = "en"
 title = 'Performance.gov'
 theme = "Pgov"
