--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://metzgr.github.io/beta-performance-gov/'
 defaultContentLanguage = "en"
 title = 'Performance.gov'
-theme = "Pgov"
+theme = "pgov"
