--- a/config.toml
+++ b/config.toml
@@ -21,10 +21,20 @@ theme = "pgov"
 
 [[menu.main]]
   name = "Communities"
-  url = "/communities/"
+  url = "/community/"
   weight = 30
 
 [[menu.main]]
+  name = "Data"
+  url = "/data/"
+  weight = 40
+
+  [[menu.main]]
   name = "About"
   url = "/about/"
-  weight = 40
+  weight = 50
+
+  [[menu.main]]
+  name = "Blog"
+  url = "/blog/"
+  weight = 60
